--- a/client/src/index.css
+++ b/client/src/index.css
@@ -87,3 +87,11 @@
   background-repeat: no-repeat;
   background-size: cover;
 }
+/*  */
+.content-container {
+  background: rgba(255, 255, 255, 0.34);
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(6.8px);
+  -webkit-backdrop-filter: blur(6.8px);
+  border: 1px solid rgba(255, 255, 255, 0.3);
+}
